--- a/src/styles/components/AboutUs.scss
+++ b/src/styles/components/AboutUs.scss
@@ -1,3 +1,34 @@
+.cf {
+  position: relative;
+  margin-top: 50px;
+  background-image: url("../../assets/Frame 110.png");
+  background-color: #f8dfdf;
+  height: 581px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 10px;
+
+  .c {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding: unset;    
+
+    .p-tag-class {
+        color: white;
+        max-width: 634px;
+        font-family: Inter;
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: left;
+      }
+  }
+}
+
 .carousel {
   padding: unset;
   .carousel-inner {
@@ -15,9 +46,9 @@
         padding-top: 1.25rem;
         padding-bottom: 1.25rem;
         color: #fff;
-        text-align: center;                     
-        width: 611px;   
-        h5 {          
+        text-align: center;
+        width: 611px;
+        h5 {
           font-family: Millik;
           font-size: 48px;
           font-weight: 400;
@@ -39,6 +70,20 @@
 }
 
 @media (max-width: 769px) {
+  .cf {
+    height: 471px;
+    .c {
+      .p-tag-class {
+        max-width: 315px;
+        font-family: Inter;
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 18px;
+        letter-spacing: 0em;
+        text-align: left;
+      }
+    }
+  }
   .carousel {
     .carousel-control-prev,
     .carousel-control-next {
@@ -50,11 +95,11 @@
           transform: translate(-50%, -50%);
           position: absolute;
           top: 60%;
-          left: 50%;    
+          left: 50%;
           width: 327px;
           padding: 0 20px;
-          h5 {         
-            width: unset;   
+          h5 {
+            width: unset;
             font-family: Millik;
             font-size: 26px;
             font-weight: 400;
