--- a/src/styles/components/AboutUs.scss
+++ b/src/styles/components/AboutUs.scss
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: Millik;
+  src: url(../../assets/Millik.otf);
+}
+
+@font-face {
+  font-family: Inter;
+  src: url(../../assets/Inter-Regular.otf);
+}
+// about second
 .cf {
   position: relative;
   margin-top: 50px;
@@ -14,20 +24,25 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    padding: unset;    
+    padding: unset;
+    height: 100%;
 
     .p-tag-class {
-        color: white;
-        max-width: 634px;
-        font-family: Inter;
-        font-size: 20px;
-        font-weight: 500;
-        line-height: 24px;
-        letter-spacing: 0em;
-        text-align: left;
-      }
+      position: absolute;
+      color: white;
+      max-width: 634px;
+      font-family: Inter;
+      font-size: 20px;
+      font-weight: 500;
+      line-height: 24px;
+      letter-spacing: 0em;
+      text-align: left;
+      top: 90%;
+      transform: translateY(-90%);
+    }
   }
 }
+// About second end
 
 .carousel {
   padding: unset;
@@ -69,7 +84,140 @@
   }
 }
 
+.our-vision {
+  .hello {
+    .cu {
+      background-color: #18564c;
+      color: white;
+      width: 695px;
+      height: 479px;
+      padding: 50px;
+      border-radius: 20px;
+      gap: 20px;
+      h3 {
+        font-family: Millik;
+        font-size: 38px;
+        font-weight: 400;
+        line-height: 37px;
+        letter-spacing: 0em;
+        text-align: left;
+      }
+      ul {
+        li {
+          font-family: Inter;
+          font-size: 24px;
+          font-weight: 400;
+          line-height: 29px;
+          letter-spacing: 0em;
+          text-align: left;
+        }
+      }
+    }
+  }
+
+  .core-values {
+    .core-values-container {
+      .fo {
+        // margin-top: 20px !important;
+      }
+      p {
+        font-family: Inter;
+        font-size: 24px;
+        font-weight: 400;
+        line-height: 32px;
+        letter-spacing: 0em;
+        text-align: center;
+        color: #202020;
+      }
+    }
+  }
+
+  .card {
+    height: 237px;
+    max-width: 295px;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    margin-right: 20px;
+    .card-body {
+      h6 {
+        font-family: Millik;
+        font-size: 22px;
+        font-weight: 400;
+        line-height: 21px;
+        letter-spacing: 0em;
+        text-align: center;
+      }
+      p {
+        font-family: Inter;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: center;
+      }
+    }
+  }
+}
+
+.our-partners-header {
+  display: grid;
+  justify-content: center;
+  .row {
+    width: 932px;
+    div {
+      h3 {
+        font-family: Millik;
+        font-size: 38px;
+        font-weight: 400;
+        line-height: 37px;
+        letter-spacing: 0em;
+        text-align: left;
+      }
+      p {
+        font-family: Inter;
+        font-size: 24px;
+        font-weight: 400;
+        line-height: 34px;
+        letter-spacing: 0em;
+        text-align: center;
+      }
+    }
+  }
+}
+
+.slider-area {
+  margin: 20px 0 50px 0;
+  .wrapper {
+    width: 100%;
+    .item {
+      &:nth-child(1) {
+        margin-left: 50px;
+      }
+      margin-right: 50px;
+      img {
+        max-width: 250px;
+        width: 100%;
+        max-height: 100px;
+      }
+    }
+  }
+}
+
+.company {
+  .row {
+    .company-photos {
+      img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+      }
+    }
+  }
+}
+
 @media (max-width: 769px) {
+  // aboutsecond
   .cf {
     height: 471px;
     .c {
@@ -80,10 +228,10 @@
         font-weight: 600;
         line-height: 18px;
         letter-spacing: 0em;
-        text-align: left;
       }
     }
   }
+  // about second end
   .carousel {
     .carousel-control-prev,
     .carousel-control-next {
@@ -115,6 +263,143 @@
             letter-spacing: 0em;
             text-align: center;
           }
+        }
+      }
+    }
+  }
+  .our-vision {
+    .hello {
+      margin-top: -15px;
+      .cu {
+        background-color: unset;
+        color: #000;
+        h3 {
+          font-family: Millik;
+          font-size: 38px;
+          font-weight: 400;
+          line-height: 37px;
+          letter-spacing: 0em;
+          text-align: left;
+          color: #258576;
+        }
+        ul {
+          li {
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 17px;
+            letter-spacing: 0em;
+            text-align: left;
+          }
+        }
+      }
+    }
+
+    .core-values {     
+      margin-top: 100px;
+      .row {        
+        display: grid;
+        justify-content: center;
+        align-items: center;
+        padding: unset;
+        .core-value{
+          height: 195px;
+          max-width: 295px;
+          margin-top: 30px;
+          &:nth-child(1){
+            margin-top: -30px;
+          }
+          &:nth-child(4){
+            margin-bottom: 50px;
+          }
+        }
+      }
+      .core-values-container {
+        .fo {
+          font-size: 24px;
+          font-weight: 400;
+          line-height: 23px;
+          letter-spacing: 0em;
+        }
+        p {
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 19px;
+          letter-spacing: 0em;
+          text-align: center;
+        }
+      }
+    }
+
+    .card {
+      height: 195px;
+      max-width: 295px;
+      display: grid;
+      justify-content: center;
+      align-items: center;
+      margin-right: 20px;
+      .card-body {
+        h6 {
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 15px;
+          letter-spacing: 0em;
+        }
+        p {
+          font-size: 12px;
+          font-weight: 400;
+          line-height: 18px;
+          letter-spacing: 0em;
+          text-align: center;
+        }
+      }
+    }
+  }
+
+  .our-partners-header {
+    display: grid;
+    justify-content: center;
+    .row {
+      width: 327px;
+      div {
+        h3 {
+          font-size: 22px;
+          font-weight: 400;
+          line-height: 21px;
+          letter-spacing: 0em;
+        }
+        p {
+          font-size: 12px;
+          font-weight: 400;
+          line-height: 17px;
+          letter-spacing: 0em;
+        }
+      }
+    }
+  }
+
+  .slider-area {
+    margin: 20px 0 50px 0;
+    .wrapper {
+      width: 100%;
+      .item {
+        &:nth-child(1) {
+          margin-left: 50px;
+        }
+        margin-right: 50px;
+        img {
+          width: unset;
+          max-height: 40px;
+        }
+      }
+    }
+  }
+
+  .company {
+    .row {
+      .company-photos {
+        img {          
+          height: 263px;
+          object-fit: contain;
         }
       }
     }
