--- a/src/styles/components/AboutUs.scss
+++ b/src/styles/components/AboutUs.scss
@@ -207,10 +207,7 @@
 .company {
   .row {
     .company-photos {
-      img {
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
+      img {        
       }
     }
   }
@@ -281,6 +278,7 @@
           letter-spacing: 0em;
           text-align: left;
           color: #258576;
+          margin: unset !important;
         }
         ul {
           li {
@@ -295,7 +293,7 @@
     }
 
     .core-values {     
-      margin-top: 100px;
+      margin-top: -100px;
       .row {        
         display: grid;
         justify-content: center;
@@ -399,7 +397,7 @@
       .company-photos {
         img {          
           height: 263px;
-          object-fit: contain;
+          object-fit: cover;
         }
       }
     }
