--- a/src/styles/components/AboutUs.scss
+++ b/src/styles/components/AboutUs.scss
@@ -272,6 +272,8 @@
       .cu {
         background-color: unset;
         color: #000;
+        width: unset;
+        height: unset;
         h3 {
           font-family: Millik;
           font-size: 38px;
@@ -281,6 +283,8 @@
           text-align: left;
           color: #258576;
           margin: unset !important;
+          width: unset;
+          height: unset;
         }
         ul {
           li {
@@ -313,6 +317,7 @@
         }
       }
       .core-values-container {
+        margin: unset;
         .fo {
           font-size: 24px;
           font-weight: 400;
@@ -396,7 +401,8 @@
   .company {
     .row {
       .company-photos {
-        img {          
+        img {    
+          width: 100%;      
           height: 263px;
           object-fit: contain;
         }
