--- a/src/styles/components/AboutUs.scss
+++ b/src/styles/components/AboutUs.scss
@@ -405,7 +405,7 @@
         margin: unset;       
         margin-top: 20px; 
         img {    
-          max-width: 327px;                
+          width: 327px;                
           object-fit: cover;
         }
       }
