--- a/src/styles/components/frequent.scss
+++ b/src/styles/components/frequent.scss
@@ -32,8 +32,8 @@
     }
 
     .faqs {
-      .container {
-        padding: 70px 30px;
+      .container1 {
+        padding: 70px 50px;
         .faq-question {
           display: flex;
           border-bottom: 1px solid #bbb;
@@ -100,8 +100,8 @@
       }
 
       .faqs {
-        .container {
-          padding: 30px 10px;
+        .container1 {
+          padding: 30px;
           .faq-question {
             display: flex;
             border-bottom: 1px solid #bbb;
