--- a/src/styles/components/featuredPro.scss
+++ b/src/styles/components/featuredPro.scss
@@ -1,10 +1,145 @@
-.card {
-  &.featured-product-container {
-    .featured-product-img {
+@font-face {
+  font-family: Millik;
+  src: url(../../assets/Millik.otf);
+}
+
+@font-face {
+  font-family: Inter;
+  src: url(../../assets/Inter-Regular.otf);
+}
+
+.featured-products {
+  .featured-product-container {
+    padding: 50px 50px;
+    .header {
       display: flex;
-      justify-content: center;
       align-items: center;
-      padding: 20px;
+      h3 {
+        font-family: Millik;
+        font-size: 26px;
+        font-weight: 400;
+        line-height: 25px;
+        letter-spacing: 0em;
+        text-align: left;
+        color: #258576;
+      }
+      .controls {
+        margin-left: auto;
+        img {
+          margin-right: 10px;
+          cursor: pointer;
+        }
+      }
+    }
+
+    .products {
+      display: inline-flex;
+      margin-top: 20px;
+      width: 100%;
+      overflow-x: auto;
+      scrollbar-width: none;
+      -ms-overflow-style: none;
+      .featured-product {
+        display: grid;
+        width: 430px;
+        height: 483px;
+        margin-right: 35px;
+        .img-container {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 430px;
+          height: 430px;
+          background: #fbfbfb;
+          img {
+            width: 260px;
+            height: 260px;
+            object-fit: cover;
+          }
+        }
+        .title {
+          display: flex;
+          margin-top: 5px;
+          font-family: Inter;
+          font-size: 18px;
+          font-weight: 500;
+          line-height: 22px;
+          letter-spacing: 0em;
+          text-align: left;
+          .price {
+            margin-left: auto;
+          }
+        }
+        .description {
+          font-family: Inter;
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 19px;
+          letter-spacing: 0em;
+          text-align: left;
+          color: #ccc;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .featured-products {
+    .featured-product-container {
+      padding: 30px 10px;
+      .header {       
+        h3 {
+          font-family: Millik;
+          font-size: 18px;
+          font-weight: 400;
+          line-height: 17px;
+          letter-spacing: 0em;
+          text-align: left;          
+        }
+        .controls {
+          margin-left: auto;
+          img {
+            display: none;
+          }
+        }
+      }
+
+      .products {        
+        margin-top: 10px;      
+        .featured-product {
+          display: grid;
+          width: 327px;
+          height: 380px;
+          margin-right: 15px;
+          .img-container {            
+            width: 327px;
+            height: 327px;            
+            img {
+              width: 170px;
+              height: 170px;
+              object-fit: cover;
+            }
+          }
+          .title {            
+            margin-top: 3px;
+            font-family: Inter;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 19px;
+            letter-spacing: 0em;
+            text-align: left;            
+          }
+          .description {
+            font-family: Inter;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 17px;
+            letter-spacing: 0em;
+            text-align: left;
+          }
+        }
+      }
     }
   }
 }
