--- a/src/styles/components/featuredPro.scss
+++ b/src/styles/components/featuredPro.scss
@@ -42,7 +42,7 @@
       .featured-product {
         display: grid;
         width: 430px;
-        height: 483px;
+        min-height: 483px;
         margin-right: 35px;
         .img-container {
           display: flex;
@@ -52,8 +52,8 @@
           height: 430px;
           background: #fbfbfb;
           img {
-            width: 260px;
-            height: 260px;
+            width: 100%;
+            height: 100%;
             object-fit: cover;
           }
         }
@@ -110,14 +110,14 @@
         .featured-product {
           display: grid;
           width: 327px;
-          height: 380px;
+          min-height: 380px;
           margin-right: 15px;
           .img-container {            
             width: 327px;
             height: 327px;            
             img {
-              width: 170px;
-              height: 170px;
+              width: 100%;
+              height: 100%;
               object-fit: cover;
             }
           }
