--- a/src/styles/components/AboutUs.scss
+++ b/src/styles/components/AboutUs.scss
@@ -382,7 +382,7 @@
     .core-values {
       margin: unset;
       .row {
-        padding: 0 0 0 30px;
+        padding: 0 0 0 30px !important;
       }
     }
     .hello {
