--- a/src/styles/components/AboutUs.scss
+++ b/src/styles/components/AboutUs.scss
@@ -22,7 +22,7 @@
     :nth-child(2) {
       padding: 20px;
     }
-    div{
+    div {
       h3 {
         font-family: Millik;
         font-size: 48px;
@@ -315,17 +315,32 @@
     width: 100% !important;
   }
 
-
   .difference-container {
-    display: none;
+    .row {
+      border: 1px solid #1f2d25;
+      box-shadow: 0 1px 0 0 #1f2d25;
+      position: relative;
+      background: #fff;
+      top: unset;
+      transform: unset;
+      div {
+        img {
+          width: 100%;
+          height: unset;
+          padding: unset;
+          -o-object-fit: contain;
+          object-fit: contain;
+        }
+      }
+    }
   }
   .all {
     background: #fff;
   }
   // aboutsecond
   .cf {
-    display: block;
-    height: 471px;
+    // display: block;
+    // height: 471px;
     .c {
       .p-tag-class {
         max-width: 315px;
