colors and logo change

--- a/src/styles/components/AboutUs.scss
+++ b/src/styles/components/AboutUs.scss
@@ -16,7 +16,7 @@
     justify-content: center;
     align-items: center;
     width: 758px !important;
-    background: #2585761c;
+    background: #24A6A61c;
     // padding: 10px;
     :nth-child(1),
     :nth-child(2) {
@@ -86,7 +86,7 @@
 }
 
 .all {
-  background: #18564c;
+  background: #102A38;
 }
 // about second
 .cf {
@@ -416,7 +416,7 @@
           line-height: 37px;
           letter-spacing: 0em;
           text-align: left;
-          color: #258576;
+          color: #24A6A6;
           width: unset;
           height: unset;
         }
