--- a/src/styles/components/featuredPro.scss
+++ b/src/styles/components/featuredPro.scss
@@ -21,7 +21,7 @@
         line-height: 25px;
         letter-spacing: 0em;
         text-align: left;
-        color: #258576;
+        color: #24A6A6;
       }
       .controls {
         margin-left: auto;
