--- a/src/styles/components/frequent.scss
+++ b/src/styles/components/frequent.scss
@@ -19,7 +19,7 @@
         line-height: 39px;
         letter-spacing: 0em;
         text-align: center;
-        color: #18564c;
+        color: #102A38;
       }
       p {
         font-family: Inter;
