--- a/src/styles/components/chatComponent.scss
+++ b/src/styles/components/chatComponent.scss
@@ -13,7 +13,7 @@
     border: 1px solid #e0e0e0;
     border-radius: 10px 10px 0 0;
     .chatHeader {
-      background: #258576;
+      background: #24A6A6;
       border: 1px;
       padding: 15px 20px 15px 20px;
       color: #fff;
