--- a/src/styles/components/chatComponent.scss
+++ b/src/styles/components/chatComponent.scss
@@ -256,19 +256,26 @@
       .sendMessage {
         .sendMessageContainer {
           font-size: 16px;
-          .message-head{
+          .message-head {
             display: none;
             display: flex;
             align-items: center;
-            input{
-              &::placeholder{
-                font-size: 24px !important;
+            input {
+              &::placeholder {
+                font-size: 18px !important;
               }
             }
           }
-          .textarea-container .sendMessageBtn img {
-            height: 40px;
-            width: 40px;
+          .textarea-container {
+            textarea {
+              &::placeholder {
+                font-size: 18px !important;
+              }
+            }
+            .sendMessageBtn img {
+              height: 40px;
+              width: 40px;
+            }
           }
         }
       }
